layout issue fixed

--- a/index.css
+++ b/index.css
@@ -102,6 +102,7 @@ header  {
   
   .nav-item {
     text-transform: capitalize;
+    padding: 1rem;
   }
 
 
